--- a/CRAU/My Project/Resources.resx
+++ b/CRAU/My Project/Resources.resx
@@ -121,4 +121,7 @@
   <data name="bgtxt" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bgtxt.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="bgtxt1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bgtxt1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
